# Observans

./: .gitignore  BUILDING.md  Cargo.toml  README.md  RELEASE_README.md  RUNNING.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/assets/Observans v0.1.0/web/web-panel-ui-desing/: Untitled Diagram.drawio
docs/dev/Observans v0.1.0/spec/bus/: README.md
docs/dev/Observans v0.1.0/spec/core/: README.md
docs/dev/Observans v0.1.0/spec/main/: README.md  architecture.md  capture-pipeline.md  crates.md  release.md  startup-flow.md  web-ui.md
docs/dev/Observans v0.1.0/spec/web/: README.md
docs/dev/Observans v0.2.0/next/: plans-v0.2.0.md
observans-bus/: Cargo.toml
observans-bus/src/: lib.rs
observans-core/: Cargo.toml
observans-core/src/: bootstrap.rs  camera_inventory.rs  capture.rs  config.rs  lib.rs  logs.rs  metrics.rs  network.rs  platform.rs  probe.rs  runtime.rs  sensors.rs  shutdown.rs  tui.rs
observans-web/: Cargo.toml
observans-web/assets/: app.js  index.html  styles.css
observans-web/src/: lib.rs  stream.rs  ui.rs
observans-web/tests/: http.rs
src/: log_capture.rs  main.rs
tests/: release_contracts.rs
tools/: build_release_linux.sh  build_release_windows.ps1  release_manifest.json  sync_installers.py
