[package]
name = "observans-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
observans-bus = { path = "../observans-bus" }
observans-core = { path = "../observans-core" }

[dev-dependencies]
clap.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
tower.workspace = true
